third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/tensorflow_lite/c_api.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen_tensorflow_lite.yaml`.
///
class TensorFlowLiteBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TensorFlowLiteBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TensorFlowLiteBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Returns a new TfLiteOperator instance.
  ///
  /// The returned TfLiteOperator instance represents a definition
  /// of an operator with the identity (builtin_code/custom_name and
  /// version) specified by the parameters, but with all callbacks initially
  /// unset.
  ///
  /// Evaluation of any operation using this operator will be done using
  /// the "prepare" and "invoke" callbacks, which can be set using
  /// `TfLiteOperatorSetPrepare` and
  /// `TfLiteOperatorSetInvoke`, or for async execution
  /// the "prepare", "eval", and "wait" callbacks of the `TfLiteAsyncKernel`,
  /// which can be set using `TfLiteOperatorSetAsyncKernel`.
  /// If the relevant callbacks are not set, then such evaluation will result
  /// in an error status.  So normally any use of this function should be followed
  /// by appropriate calls to set those callbacks.
  ///
  /// \note The caller retains ownership and should ensure that
  /// the lifetime of the `TfLiteOperator` must be at least as long as
  /// the lifetime of any `TfLiteInterpreter` or `tflite::Interpreter` that it is
  /// used in.
  ///
  /// \param builtin_code Enumeration code specifying which builtin operator this
  /// defines, or `TfLiteBuiltinCustom` to define a custom op.
  /// \param custom_name  Name of the custom op, or `nullptr` for a builtin op.
  /// If `custom_name` is non-null, then `builtin_code` should
  /// be `TfLiteBuiltinCustom`.
  /// \param version      Version of the op.  See
  /// https://www.tensorflow.org/lite/guide/ops_version
  /// \param user_data    Opaque pointer passed to the operator's callbacks set
  /// with functions such as `TfLiteOperatorSetXXXWithData`.
  /// The user is expected to manage the memory pointed by
  /// this field and the lifetime of that memory should extend
  /// at least from the call to `TfLiteOperatorCreate`
  /// to the invocation of the callback set with
  /// `TfLiteOperatorSetFreeWithData`.
  ///
  /// \return a newly created TfLiteOperator on success, or a nullptr on failure
  ffi.Pointer<TfLiteOperator> TfLiteOperatorCreate(
    int builtin_code,
    ffi.Pointer<ffi.Char> custom_name,
    int version,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _TfLiteOperatorCreate(builtin_code, custom_name, version, user_data);
  }

  late final _TfLiteOperatorCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteOperator> Function(
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('TfLiteOperatorCreate');
  late final _TfLiteOperatorCreate =
      _TfLiteOperatorCreatePtr.asFunction<
        ffi.Pointer<TfLiteOperator> Function(
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Destroys the TfLiteOperator instance.
  void TfLiteOperatorDelete(ffi.Pointer<TfLiteOperator> registration) {
    return _TfLiteOperatorDelete(registration);
  }

  late final _TfLiteOperatorDeletePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TfLiteOperator>)>
      >('TfLiteOperatorDelete');
  late final _TfLiteOperatorDelete =
      _TfLiteOperatorDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteOperator>)
      >();

  /// Return the builtin op code of the provided external 'registration'.
  int TfLiteOperatorGetBuiltInCode(ffi.Pointer<TfLiteOperator> registration) {
    return _TfLiteOperatorGetBuiltInCode(registration);
  }

  late final _TfLiteOperatorGetBuiltInCodePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteOperator>)>
      >('TfLiteOperatorGetBuiltInCode');
  late final _TfLiteOperatorGetBuiltInCode =
      _TfLiteOperatorGetBuiltInCodePtr.asFunction<
        int Function(ffi.Pointer<TfLiteOperator>)
      >();

  /// Returns the custom name of the provided 'registration'. The returned pointer
  /// will be non-null iff the op is a custom op.
  ffi.Pointer<ffi.Char> TfLiteOperatorGetCustomName(
    ffi.Pointer<TfLiteOperator> registration,
  ) {
    return _TfLiteOperatorGetCustomName(registration);
  }

  late final _TfLiteOperatorGetCustomNamePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteOperator>)
        >
      >('TfLiteOperatorGetCustomName');
  late final _TfLiteOperatorGetCustomName =
      _TfLiteOperatorGetCustomNamePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteOperator>)
      >();

  /// Return the OP version of the provided external 'registration'.  Return -1
  /// in case of error, or if the provided address is null.
  int TfLiteOperatorGetVersion(ffi.Pointer<TfLiteOperator> registration) {
    return _TfLiteOperatorGetVersion(registration);
  }

  late final _TfLiteOperatorGetVersionPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TfLiteOperator>)>
      >('TfLiteOperatorGetVersion');
  late final _TfLiteOperatorGetVersion =
      _TfLiteOperatorGetVersionPtr.asFunction<
        int Function(ffi.Pointer<TfLiteOperator>)
      >();

  /// Return the user data field of the provided external 'registration', or
  /// nullptr if none was set.
  ffi.Pointer<ffi.Void> TfLiteOperatorGetUserData(
    ffi.Pointer<TfLiteOperator> registration,
  ) {
    return _TfLiteOperatorGetUserData(registration);
  }

  late final _TfLiteOperatorGetUserDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<TfLiteOperator>)
        >
      >('TfLiteOperatorGetUserData');
  late final _TfLiteOperatorGetUserData =
      _TfLiteOperatorGetUserDataPtr.asFunction<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<TfLiteOperator>)
      >();

  /// Sets the initialization callback for the registration.
  ///
  /// The callback is called to initialize the op from serialized data.
  /// Please refer `init` of `TfLiteRegistration` for the detail.
  ///
  /// Deprecated: Use `TfLiteOperatorSetInitWithData`
  void TfLiteOperatorSetInit(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<ffi.Char> buffer,
          ffi.Size length,
        )
      >
    >
    init,
  ) {
    return _TfLiteOperatorSetInit(registration, init);
  }

  late final _TfLiteOperatorSetInitPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<ffi.Char> buffer,
                  ffi.Size length,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetInit');
  late final _TfLiteOperatorSetInit =
      _TfLiteOperatorSetInitPtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<ffi.Char> buffer,
                ffi.Size length,
              )
            >
          >,
        )
      >();

  /// Sets the initialization callback for the registration. The function returns
  /// an error upon failure.
  ///
  /// The callback is called to initialize the op from serialized data. The value
  /// passed in the `user_data` parameter is the value that was passed to
  /// `TfLiteOperatorCreate`.  Please refer `init` of `TfLiteRegistration`
  /// for the detail.
  int TfLiteOperatorSetInitWithData(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<ffi.Char> buffer,
          ffi.Size length,
        )
      >
    >
    init,
  ) {
    return _TfLiteOperatorSetInitWithData(registration, init);
  }

  late final _TfLiteOperatorSetInitWithDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<ffi.Char> buffer,
                  ffi.Size length,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetInitWithData');
  late final _TfLiteOperatorSetInitWithData =
      _TfLiteOperatorSetInitWithDataPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<ffi.Char> buffer,
                ffi.Size length,
              )
            >
          >,
        )
      >();

  /// Sets the deallocation callback for the registration.
  ///
  /// This callback is called to deallocate the data returned by the init
  /// callback. The value passed in the `data` parameter is the value that was
  /// returned by the `init` callback. Please refer `free` of `TfLiteRegistration`
  /// for the detail.
  ///
  /// Deprecated: Use `TfLiteOperatorSetFreeWithData`
  void TfLiteOperatorSetFree(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<ffi.Void> data,
        )
      >
    >
    free,
  ) {
    return _TfLiteOperatorSetFree(registration, free);
  }

  late final _TfLiteOperatorSetFreePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Void Function(
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<ffi.Void> data,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetFree');
  late final _TfLiteOperatorSetFree =
      _TfLiteOperatorSetFreePtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Void Function(
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<ffi.Void> data,
              )
            >
          >,
        )
      >();
